// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlinedInput ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-x743zv-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-12y93gm-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-gpjuor"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-yjqrht-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-b3rrvb-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-gpjuor"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-8bgbv4-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-wzataq-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-gpjuor"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-16fd673-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-b3rrvb-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-gpjuor"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-14apx5g-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-1leomru-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-gpjuor"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
